<resources>
    <string name="app_name">COSC3P97Project</string>
    <string name="about_info">Vincent Morsaint - vm10vf\n
        Ben Mannell - bm11ny\n
        COSC 3P97 - Project\n
        December 15th 2015</string>
    <string name="action_settings">Settings</string>

    <string name="title_main">BodyLog</string>
    <string name="title_activity_min3_dtest">Min3DTest</string>
    <string name="title_activity_rajawali">Rajawali</string>
    <string name="title_activity_appointment_list">Appointment List</string>
    <string name="title_activity_patient_list">Patient List</string>
    <string name="title_activity_patient_detail">Patient Detail</string>
    <string name="title_activity_patient_file_detail">Patient File Detail</string>
    <string name="title_activity_patient_note_detail">Patient Note Detail</string>
    <string name="title_activity_appointment_form">AppointmentForm</string>
    <string name="title_activity_about">About</string>

    <string name="add">Add</string>
    <string name="sortByName">Sort By Name</string>
    <string name="sortByActivity">Sort By Activity</string>
    <string name="showAll">Show All</string>
    <string name="showActive">Show Active Only</string>
    <string name="closeFile">Close File</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>


<<<<<<< HEAD
    <string name="hello_world">Hello world!</string>
=======

    <string name="LeftHand">Left Hand</string>
    <string name="RightHand">Right Hand</string>
    <string name="LeftUpperArm">Left Upper Arm</string>
    <string name="RightUpperArm">Right Upper Arm</string>
    <string name="LeftForeArm">Left Forearm</string>
    <string name="RightForeArm">Right Forearm</string>
    <string name="Chest">Chest</string>
    <string name="Abdomin">Abdomin</string>
    <string name="Head">Head</string>
    <string name="LeftLeg">Left Leg</string>
    <string name="RightLeg">Right Leg</string>
    <string name="LeftFoot">Left Foot</string>
    <string name="RightFoot">Right Foot</string>
    <string name="LowerBack">Lower Back</string>
    <string name="UpperBack">Upper Back</string>
>>>>>>> finalstuff
</resources>

