<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PatientClasses.PatientDetailActivity">

        <item android:id="@+id/action_edit"
              android:icon="@android:drawable/ic_menu_edit"
              android:title="@string/edit"
              app:showAsAction="always" />

        <item android:id="@+id/action_show_active"
              android:title="@string/showActive"
              app:showAsAction="ifRoom" />

        <item android:id="@+id/action_show_all"
              android:title="@string/showAll"
              app:showAsAction="ifRoom" />
        <item android:id="@+id/action_view_apps"
            android:title="See Appts."
            app:showAsAction="never" />
        <item android:id="@+id/action_new_app"
            android:title="New Appt."
            app:showAsAction="never" />
</menu>
